--- a/style.css
+++ b/style.css
@@ -1,4 +1,108 @@
-.stream {
-  margin: 0 auto 0 auto;
-  height: 50vh;
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.app {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.video {
+  max-width: 75vw;
+  max-height: 75vh;
+  cursor: pointer;
+  background-color: #000;
+}
+
+.snapshots {
+  width: 100%;
+  max-width: 1000px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.snapshot-wrapper {
+  width: 45%;
+  margin: 2.5%;
+  position: relative;
+  overflow: hidden;
+}
+
+.snapshot-wrapper.focused::before {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.focused .delete-btn {
+  top: 0;
+  right: 0;
+}
+
+.focused .download-btn {
+  top: 0;
+  left: 0;
+}
+
+.focused .btn {
+  position: absolute;
+  z-index: 2;
+  transform: translateY(0);
+  transition: transform 0.25s;
+}
+
+.btn {
+  position: absolute;
+  cursor: pointer;
+  transform: translateY(-50px);
+
+  text-shadow: 2px 2px 4px #333;
+
+  border: none;
+  background-color: transparent;
+}
+
+.download-btn {
+  font-size: 1.5rem;
+  padding-top: 0.4rem;
+}
+
+.delete-btn {
+  font-size: 2rem;
+  color: #a00;
+  font-weight: bold;
+}
+
+.snapshot {
+  width: 100%;
+  height: auto;
+  margin: 0;
+  padding: 0;
+}
+
+@media (min-width: 720px) {
+  .snapshot-wrapper {
+    width: 20%;
+    margin: 2.5%;
+    cursor: pointer;
+  }
 }
