--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* basic styles */
 html,
 body {
   margin: 0;
@@ -12,6 +13,7 @@ body {
   box-sizing: border-box;
 }
 
+/* main container styles */
 .app {
   padding: 1rem;
   display: flex;
@@ -35,6 +37,7 @@ body {
   justify-content: center;
 }
 
+/* custom button class */
 .btn {
   border: 2px solid #333;
   border-radius: 3px;
@@ -52,6 +55,8 @@ body {
   border-color: #aaa;
   color: #aaa;
 }
+
+/* special styles for trigger button */
 .trigger-btn[disabled] {
   color: #000;
 }
@@ -60,10 +65,12 @@ body {
   opacity: 0.5;
 }
 
+/* special styles for mirror button */
 .mirror-btn-input {
   display: none;
 }
 
+/* styles related to showing the snapshot thumbs */
 .snapshots {
   width: 100%;
   max-width: 1000px;
@@ -102,6 +109,14 @@ body {
   overflow: hidden;
 }
 
+.snapshot {
+  width: 100%;
+  height: auto;
+  margin: 0;
+  padding: 0;
+}
+
+/* styles for when a snapshot is hovered or tapped */
 .snapshot-wrapper.focused::before {
   content: "";
   position: absolute;
@@ -130,6 +145,7 @@ body {
   transition: transform 0.25s;
 }
 
+/* styles for buttons over snapshots */
 .snap-btn {
   position: absolute;
   cursor: pointer;
@@ -150,13 +166,6 @@ body {
   font-size: 2rem;
   color: #a00;
   font-weight: bold;
-}
-
-.snapshot {
-  width: 100%;
-  height: auto;
-  margin: 0;
-  padding: 0;
 }
 
 /* Footer */
