Moved trigger hint from title to data attribute
The tooltip was too large because the description was in the title attribute.
To get rid of this the description was moved to the data-trigger-hint attribute.

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body {
 }
 
 .snapshots:empty::before {
-  content: attr(title);
+  content: attr(data-trigger-hint);
   color: #aaa;
   text-align: center;
   margin: 0 auto;
