Added flash animation
Added a CSS animation for simulating a flash to the video feed.
Currently inside takeSnapshot(). Should be extracted as side effect later

--- a/style.css
+++ b/style.css
@@ -29,6 +29,21 @@ body {
   background-color: #000;
 }
 
+video.flash {
+  animation: flash 0.5s;
+}
+
+@keyframes flash {
+  0% {
+  opacity: 0.25;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+
 .options {
   margin: 0;
   padding: 0.5rem;
